<resources>
    <string name="app_name">Workshop Youtube</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="searchbutton">Search</string>

    <string name="title_section1">Simple Player</string>
    <string name="title_section2">Controls</string>
    <string name="title_section3">Playlist</string>
    <string name="title_section4">Youtube Intents</string>

    <string name="play_video">Play video</string>
    <string name="play_playlist">Play playlist</string>
    <string name="play_video_list">Play video list</string>
    <string name="start_index">Start index</string>
    <string name="start_time">Start time (sec)</string>
    <string name="autoplay">Autoplay</string>
    <string name="lightbox_mode">Lightbox mode</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>


    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_to">Skip To</string>
    <string name="seconds">secs</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="chromeless">Chromeless</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
