<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <!--<TextView
            android:id="@+id/state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:singleLine="true" />-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/youtubeFragment"></FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="8dp">

            <include
                layout="@layout/player_controls_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioGroup
                android:id="@+id/style_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_style"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioButton
                    android:id="@+id/style_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/def" />

                <RadioButton
                    android:id="@+id/style_minimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minimal" />

                <RadioButton
                    android:id="@+id/style_chromeless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chromeless" />

            </RadioGroup>

        </LinearLayout>

        <!--<ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/event_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

        </ScrollView>-->

</LinearLayout>
